<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".Setting.Act_Setting">

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>
    <LinearLayout
        android:id="@+id/topLL"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5.4"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/rl_manage_exercise_plan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bt_manage_exercise_plan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/ExercisePlanManagement"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="exercisePlanManagement"
                android:src="@drawable/btn_setting01" />
        </LinearLayout>
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/rl_manage_program"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bt_manage_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="programManagement"
                android:contentDescription="@string/ProgramManagement"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/btn_setting02" />
        </LinearLayout>
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/rl_manage_favorites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bt_manage_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/ManagingFavorites"
                android:onClick="favorites"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/btn_setting03" />
        </LinearLayout>
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/rl_data_extraction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bt_data_extraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dataExtraction"
                android:background="@android:color/transparent"
                android:contentDescription="@string/DataExtraction"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/btn_setting04" />
        </LinearLayout>
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/rl_system_init"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bt_system_init"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/SystemInit"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="systemInit"
                android:src="@drawable/btn_setting05" />
        </LinearLayout>
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/rl_system_state"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/bt_system_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/SystemState"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/btn_setting06" />
        </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:scaleType="fitXY"
                android:src="@drawable/footdeco_type_b"
                android:layout_weight="1" />
        </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</RelativeLayout>