<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbcfc9"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:background="#ff6669"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Workout_plan_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:textSize="13dp"/>

            <EditText
                android:id="@+id/et_exercisePlanName"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:hint="@string/exercisePlanName"
                android:textSize="13dp"
                android:maxLength="25"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textCursorDrawable="@null"
                android:textColorHint="@drawable/selector"
                android:nextFocusUp="@id/et_exercisePlanName"
                android:nextFocusLeft="@id/et_exercisePlanName"
                android:background="#ffffff"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="100dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:text="@string/act_inact"
                    android:textSize="12dp"
                    android:gravity="right|center_vertical"
                    android:layout_marginRight="10dp"/>

                <CheckBox
                    android:id="@+id/cb_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/state_checkbox"
                    android:button="@null"
                    android:checked="true" />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#9b928e"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="fill_parent"
                android:text="@string/program"
                android:inputType="number"
                android:gravity="right|center_vertical"
                android:textSize="13dp"
                android:layout_marginRight="10dp"/>
            <Spinner
                android:hint="@string/program_error"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:id="@+id/sp_program"
                android:dropDownWidth="200dp"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:gravity="center"/>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#9b928e"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="fill_parent"
                    android:text="@string/ExerciseTime"
                    android:gravity="right|center_vertical"
                    android:textSize="13dp"
                    android:layout_marginRight="10dp"/>
                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="fill_parent"
                    android:background="#ffffff"
                    android:layout_marginRight="10dp"
                    android:textSize="13dp"
                    android:hint="@string/time_error"
                    android:textCursorDrawable="@null"
                    android:textColorHint="@drawable/selector"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <Button
                    android:layout_marginLeft="80dp"
                    android:layout_width="0dp"
                    android:id="@+id/bt_add"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.8"
                    android:background="@drawable/bt_addsp_nor" />
                <TextView
                    android:id="@+id/tv_cnt"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:text="남은횟수 %d/%d"
                    android:textColor="#ff6669"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#9b928e"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <ListView
            android:id="@+id/lv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transcriptMode="alwaysScroll"
            android:stackFromBottom="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_cancel_nor"/>
        <Button
            android:id="@+id/saveDone"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_save_nor"/>
    </LinearLayout>
</LinearLayout>
