<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainmenu_bg"
    android:orientation="vertical"
    tools:context=".Home.Act_Home">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"></LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:orientation="vertical"
        android:paddingLeft="100dp">
        <RelativeLayout
            android:id="@+id/rl_exercise_plan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/bt_exercise_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/exercisePlan"
                android:scaleType="fitXY"
                android:onClick="exercisePlan"
                android:src="@drawable/bt_eplan_nor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_program"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bt_program"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/program"
                android:onClick="program"
                android:scaleType="fitXY"
                android:src="@drawable/bt_prog_nor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_favorites"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bt_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorites"
                android:onClick="favorites"
                android:scaleType="fitXY"
                android:src="@drawable/bt_bmark_nor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_logout"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bt_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorites"
                android:onClick="setting"
                android:scaleType="fitXY"
                android:src="@drawable/bt_set_nor" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"></LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:background="@drawable/footdeco_type_a"></LinearLayout>

</LinearLayout>
